removed projects from home page, added photo, fixed mastodon layout issue, added sean's blog

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -492,6 +492,9 @@ header.small {
   overflow-x: scroll;
   overflow-y: hidden;
 }
+.mastodon .images:not(:has(*)) {
+  display: none;
+}
 .mastodon .images a {
   text-decoration: none;
   border-bottom: none;
